--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,12 @@ body, h1, h2, p, ul, li {
     margin: 0;
     padding: 0;
 }
+h1 {
+    font-family: 'Fauna One', serif;
+}
 
 body {
-    font-family: "Noto Sans Medium", sans-serif;
+    font-family: "Noto Sans", sans-serif;
 }
 
 /* Header */
@@ -26,8 +29,8 @@ body {
 }
 
 .logo img {
-    width: 300px; /* Ajuste este valor conforme necessário */
-    height: 90px; /* Isso mantém a proporção da imagem */
+    width: 256px; /* Ajuste este valor conforme necessário */
+    height: 88px; /* Isso mantém a proporção da imagem */
 }
 
 .nav-links {
@@ -41,7 +44,7 @@ body {
 
 .nav-links a {
     text-decoration: none;
-    color: #333;
+    color: #ba5c3f;
 }
 
 /* Hero Section */
@@ -51,6 +54,23 @@ body {
     color: #000;
     text-align: center;
     padding: 100px 0;
+    background-color: #f6f6f6;
+}
+.hero-carousel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-slide {
+    margin: 0 10px; /* Espaçamento entre os slides */
+}
+
+.hero-slide img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; /* Centralizar horizontalmente */
 }
 
 .hero-content {
@@ -71,7 +91,7 @@ body {
 .btn {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #ff6b6b;
+    background-color: #ba5c3f;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -83,7 +103,7 @@ body {
     display: flex;
     justify-content: space-around;
     padding: 80px 0;
-    background-color: #adadab;
+    background-color: #f5eadf;
 }
 
 .feature {
@@ -99,7 +119,7 @@ body {
 .footer {
     text-align: center;
     padding: 20px 0;
-    background-color: #333;
+    background-color: #332;
     color: #fff;
 }
 
