--- a/Template01/assets/css/styles.css
+++ b/Template01/assets/css/styles.css
@@ -8,6 +8,7 @@ h1 {
 }
 
 body {
+    /*overflow: hidden;*/
     font-family: "Noto Sans", sans-serif;
 }
 
@@ -48,6 +49,11 @@ body {
 }
 
 /* Hero Section */
+.hero, .features {
+    height: calc(100vh - headerHeight - footerHeight); /* Adjust headerHeight and footerHeight accordingly */
+    overflow: hidden;
+}
+
 .hero {
     background-image: url('background.jpg');
     background-size: cover;
@@ -67,7 +73,7 @@ body {
 }
 
 .hero-slide img {
-    max-width: 100%;
+    max-width: 50%;
     height: auto;
     display: block;
     margin: 0 auto; /* Centralizar horizontalmente */
@@ -79,13 +85,13 @@ body {
 }
 
 .hero h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
+    font-size: 28px;
+    margin-bottom: 15px;
 }
 
 .hero p {
-    font-size: 18px;
-    margin-bottom: 40px;
+    font-size: 16px;
+    margin-bottom: 30px;
 }
 
 .btn {
@@ -111,7 +117,7 @@ body {
 }
 
 .feature h2 {
-    font-size: 24px;
+    font-size: 20px;
     margin-bottom: 10px;
 }
 
@@ -124,7 +130,7 @@ body {
 }
 
 /* Responsive Styles */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
     .nav-links {
         flex-direction: column;
         align-items: flex-start;
