corrigido sobrepesição imagem de canto-botão

--- a/project/css/linkstyles.css
+++ b/project/css/linkstyles.css
@@ -12,7 +12,7 @@ body{
 
 header {
     max-width: 100%;
-    margin: -60vh 0px; /* Ajuste as margens conforme necessário */
+    margin: -60vh 10vh; /* Ajuste as margens conforme necessário */
     margin-bottom: auto;
 }
 
@@ -76,6 +76,7 @@ ul {
 .text-subscribe-button {
     /*align-self: center;*/
     max-width: 50%;
+    max-height: 17.819967266775777vh;
     background-color: #f5eadf;
     color: #d08b67;
     border: none;
@@ -93,16 +94,16 @@ ul {
     background-color: #f5eadf;
     color: #d08b67;
     border: none;
-    margin-top: 20px;
+    margin-top: 4vh;
     font-size: 100%;
-    font-family: Noto Sans, sans-serif;
+    /*font-family: Noto Sans, sans-serif;*/
     cursor: pointer;
 }
 
 /* Media query para telas menores */
-@media (max-width: 768px) {
+@media (max-width: 480px) {
     body {
-        font-size: 28px;
+        font-size: 22px;
     }
     .logo{
         width: 200px;
@@ -110,5 +111,52 @@ ul {
         margin-top: 4vh;
     }
     /* Outras alterações de estilo */
+
+    .text-subscribe-button {
+        /*align-self: center;*/
+        max-width: 60%;
+        max-height:100%;
+        background-color: #f5eadf;
+        color: #d08b67;
+        border: none;
+        margin-top: 4vh;
+        font-size:100%;
+        cursor: pointer;
+      }
     
+
+    .container {
+        max-width: 80%;
+        position: relative;
+        width: auto;
+        height: auto;
+        overflow: hidden;
+        margin-bottom: 0px;
+    }
+
+    .corner-image {
+        position: relative;
+        top: 0;
+        right: 0;
+         /* Para centralizar verticalmente */
+         transform-origin: right;
+        transform:  translate(30vw, -5vh)rotate(90deg);
+    }
+    
+    .container2 {
+        max-width: 50%;
+        position: relative;
+        width: fit-content;
+        height: auto;
+        overflow: hidden;
+        margin-top: -100px;
+    }
+
+    .corner-image2 {
+        position: relative;
+        width: 100%;
+         /* Para centralizar verticalmente */
+         transform-origin: left;
+        transform: translate(100%, 80%) rotate(40deg);
+    }
 }
