--- a/project/css/buttonefects.css
+++ b/project/css/buttonefects.css
@@ -25,7 +25,7 @@
     color: #d08b67;
     border: none;
     margin-top: 20px;
-    font-size: 3.001464128843338vw;
+    /*font-size: 3.001464128843338vw;*/
     font-family: 'Noto Sans', sans-serif;
     cursor: pointer;
     transition: background-color 0.3s ease; /* Adiciona uma transição suave */
@@ -43,8 +43,8 @@
     background-color: #f5eadf;
     color: #d08b67;
     border: none;
-    margin-top: 20px;
-    font-size: 3.001464128843338vw;
+    margin-top: 4vh;
+    /*font-size: 3.001464128843338vh;*/
     font-family: 'Noto Sans', sans-serif;
     cursor: pointer;
     transition: transform 0.3s ease; /* Adiciona uma transição suave */
@@ -53,4 +53,11 @@
 .text-subscribe-button-XL:hover,
 .text-subscribe-button:hover {
     transform: scale(1.1); /* Aumenta o tamanho ao passar o mouse */
+}
+
+@media (max-width: 700px) {
+    .text-subscribe-button-XL, .text-subscribe-button {
+        font-size: 3.001464128843338vh;
+        max-width: 70%;
+        max-height: 17.819967266775777vh;
 }
