--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -158,41 +158,48 @@ footer .direitos {
     color: #ccc;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 620px) {
     .background-image {
         background-image: url(../images/Fundo-Mobile.png);
-        background-size: 100% auto;
+        background-repeat: space;
+        background-size: 100%;
     }
+    
 
     .circle-logo {
-        max-width: 130px;
-        max-height: 130px;
+       position: relative;
+       margin-top: 100rem;
+        /*max-width: 100%;
+        max-height: 100%;*/
     }
 
     .logo {
-        width: 250px;
-        height: 90px;
+        width: 100%;
+        height: 100%;
     }
 
     .round-buttons {
-        position: absolute;
+        position: fixed;
+        width: 30%;
         display: inline;
-        left: 10px;
-        margin-left: 0px;
-        /*padding: 20px 20px;
-        margin-top: 50px;
-        margin-bottom: 50px;*/
+        left: 2em;
+        margin-left: .2rem;
+        border: #73AD21 2px solid;
+        padding: .2rem;
+        margin-left: 0%;
+        /*margin-bottom: 1em;*/
     }
-
+    
     .text-section{
         position: absolute;
-        right: 0px;
-        top: 20px;
-        width: 220px;
+        width: 70%;
+        right: 0;
+        top: 1em;
+        /*width: 220px;*/
         border: 3px solid #73AD21;
-        padding: 5px;
-        font-size: medium;
-        margin-top: 0px;
+        padding: .5em;
+        font-size: 1rem;
+        margin-top: 0;
     }
 
     .text-subscribe-button{
