--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html,
 body {
     height: 100vh;
@@ -26,6 +31,7 @@ body {
 .logo {
     width: 22.620790629575403vw;
     height: 14.566284779050736vh;
+    border: #73AD21 2px solid;
 }
 
 .round-button {
@@ -158,7 +164,7 @@ footer .direitos {
     color: #ccc;
 }
 
-@media (max-width: 620px) {
+@media (max-width: 400px) {
     .background-image {
         background-image: url(../images/Fundo-Mobile.png);
         background-repeat: space;
